# bismuth

./: .editorconfig  .eslintrc.json  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  .prettierignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  Makefile  README.md  ROADMAP.md  TWEAKS.md  config.ts  index.html  modules.html  package.json  tsconfig.json  tsconfig.json.license  tslint.json
.github/: FUNDING.yml  pull_request_template.md  pull_request_template.md.license
.husky/: pre-commit
.reuse/: dep5
assets/: highlight.css  search.js
classes/: This_module_basically_reimplements_standard_JS_setTimeout_function_in_Qt_QML_environment__The_setTimeout_function_is_not_availible_in_Qt_JavaScript_environment_.TimersPool.html  _internal_.Rect.html  _internal_.RectDelta.html  config.Config.html  config.ConfigImpl.html  controller.ControllerImpl.html  controller.TilingController.html  controller_action.DecreaseActiveWindowHeight.html  controller_action.DecreaseActiveWindowWidth.html  controller_action.DecreaseLayoutMasterAreaSize.html  controller_action.DecreaseMasterAreaWindowCount.html  controller_action.FocusBottomWindow.html  controller_action.FocusLeftWindow.html  controller_action.FocusNextWindow.html  controller_action.FocusPreviousWindow.html  controller_action.FocusRightWindow.html  controller_action.FocusUpperWindow.html  controller_action.IncreaseActiveWindowHeight.html  controller_action.IncreaseActiveWindowWidth.html  controller_action.IncreaseLayoutMasterAreaSize.html  controller_action.IncreaseMasterAreaWindowCount.html  controller_action.MoveActiveWindowDown.html  controller_action.MoveActiveWindowLeft.html  controller_action.MoveActiveWindowRight.html  controller_action.MoveActiveWindowToNextPosition.html  controller_action.MoveActiveWindowToPreviousPosition.html  controller_action.MoveActiveWindowUp.html  controller_action.PushActiveWindowIntoMasterAreaFront.html  (+144 more)
src/config/kconf_update/: CMakeLists.txt  bismuth_new_logger.upd  bismuth_old_conf_ui.sh  bismuth_old_conf_ui.upd  bismuth_shortcuts_category.upd  old_conf_ui.upd  shortcuts_category.upd
src/core/: CMakeLists.txt  config.hpp  config.kcfgc  controller.cpp  controller.hpp  core.cpp  core.hpp  core.qrc  qml-plugin.cpp  qml-plugin.hpp  qmldir  ts-proxy.cpp  ts-proxy.hpp  view.cpp  view.hpp
src/core/dbus/: CMakeLists.txt  dbus-service.cpp  dbus-service.hpp  macro.hpp
src/core/engine/: CMakeLists.txt  engine.cpp  engine.hpp  layout.cpp  layout.hpp  surface.cpp  surface.hpp  window-group.cpp  window-group.hpp  window.cpp  window.hpp  window_group.cpp  window_group.hpp  windows_list.cpp  windows_list.hpp
src/core/engine/layout/: CMakeLists.txt  floating.cpp  floating.hpp  layout.cpp  layout.hpp  layout_list.cpp  layout_list.hpp  master-stack.cpp  master-stack.hpp  monocle.cpp  monocle.hpp  stacked.cpp  stacked.hpp  tabbed.cpp  tabbed.hpp  three_column.cpp  three_column.hpp  utils.cpp  utils.hpp
src/core/engine/layout/piece/: CMakeLists.txt  angle-dependent.cpp  angle-dependent.hpp  fill.cpp  fill.hpp  half-split.cpp  half-split.hpp  piece.cpp  piece.hpp  rotatable.cpp  rotatable.hpp  stack.cpp  stack.hpp
src/core/icons/: CMakeLists.txt
src/core/kconf_update/: CMakeLists.txt  legacy-shortcuts.cpp  legacy_shortcuts.cpp  legacy_shortcuts.hpp
src/core/plasma-api/: CMakeLists.txt  api.cpp  api.hpp  client.cpp  client.hpp  output.cpp  output.hpp  plasma-api.cpp  plasma-api.hpp  toplevel.cpp  toplevel.hpp  utils.hpp  virtual-desktop.cpp  virtual_desktop.cpp  virtual_desktop.hpp  window.cpp  window.hpp  workspace.cpp  workspace.hpp
src/core/ui/: Osd.qml
src/dbus-plugin/: CMakeLists.txt  dbus-plugin.cpp  dbus-plugin.h  dbus-service.cpp  dbus-service.h  macro.h
src/dbus-plugin/imports/: qmldir
src/kcm/: CMakeLists.txt  CMakePresets.json  CMakePresets.json.license  CONTRIBUTING.md  bismuth.cpp  bismuth.h  bismuth_config.kcfg  bismuth_config.kcfgc  kcm_bismuth.json  metadata.json  org.kde.KWin.xml
src/kcm/icons/: CMakeLists.txt
src/kcm/kconf_update/: CMakeLists.txt  old_conf_ui.sh
src/kcm/package/: metadata.desktop
src/kcm/package/contents/ui/: Appearance.qml  Behaviour.qml  main.qml
src/kcm/package/contents/ui/components/: ConfigCheckBox.qml  ConfigSpinBox.qml  ConfigTextField.qml  PixelsConfigSpinBox.qml  RatioConfigSpinBox.qml
src/kcm/package/contents/ui/views/: Gaps.qml  GapsOverlay.qml  Layouts.qml  MonocleOverlay.qml  TabbedLayoutOverlay.qml  WindowRules.qml  WindowRulesOverlay.qml  WorkspaceRules.qml  WorkspaceRulesOverlay.qml
src/kdecoration/: CMakeLists.txt  decoration.cpp  decoration.hpp  metadata.json
src/kwinscript/: CMakeLists.txt  config.ts  index.ts  metadata.desktop
src/kwinscript/controller/: action.test.ts  action.ts  index.ts  request.ts
src/kwinscript/driver/: index.ts  surface.ts  window.ts
src/kwinscript/engine/: index.ts  layout_store.ts  window.ts  window_store.ts
src/kwinscript/engine/layout/: cascade_layout.ts  dynamic_layout.ts  floating_layout.ts  index.ts  layout_part.ts  layout_utils.ts  monocle_layout.ts  quarter_layout.ts  slabs_layout.ts  spiral_layout.ts  spread_layout.ts  stair_layout.ts  three_column_layout.ts  tile_layout.ts  vertical_layout.ts
src/kwinscript/icons/: CMakeLists.txt
src/kwinscript/kconf_update/: CMakeLists.txt  local_install_to_global.sh  local_install_to_global.upd
src/kwinscript/res/: metadata.desktop
src/kwinscript/res/config/: main.xml
src/kwinscript/res/ui/: TrayItem.qml  config.ui
src/kwinscript/ui/: TrayItem.qml  main.qml  popup.qml
src/kwinscript/util/: func.ts  log.ts  rect.ts
tests/core/: CMakeLists.txt  config.mock.cpp  config.mock.hpp  helpers.cpp  helpers.hpp  main.cpp
tests/core/engine/: CMakeLists.txt  window.cpp  window.test.cpp
tests/core/engine/layout/: CMakeLists.txt  monocle.test.cpp
tests/core/engine/layout/piece/: CMakeLists.txt  fill.test.cpp  half-split.test.cpp  stack.test.cpp  utils.test.cpp
tests/core/plasma-api/: CMakeLists.txt  client.mock.cpp  window.mock.cpp  window.mock.hpp  workspace.cpp  workspace.mock.cpp  workspace.mock.hpp  workspace.test.cpp
(+381 files in other folders)
